--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        
         <activity
             android:name="com.coolweather.app.activity.ChooseAreaActivity"
             android:label="@string/app_name" >
@@ -23,6 +25,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity android:name="com.coolweather.app.activity.WeatherActivity">
+            
+        </activity>
+   		<service android:name="com.coolweather.app.service.AutoUpdateService"></service>
+        <receiver android:name="com.coolweather.app.receiver.AutoUpdateReceiver"></receiver>
+        </application>
 
 </manifest>
